--- a/sner4web/templates/base.html
+++ b/sner4web/templates/base.html
@@ -43,7 +43,7 @@
 		</div>
 		<div id="navbar" class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
-				<li><a href="">Tasks</a></li>
+				<li><a href="{{ url_for('task.list') }}">Tasks</a></li>
 			</ul>
 		</div><!--/.nav-collapse -->
 	</div>
