profile with crud and basic relationship to task

--- a/sner_web/templates/base.html
+++ b/sner_web/templates/base.html
@@ -43,6 +43,7 @@
 		</div>
 		<div id="navbar" class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
+				<li><a href="{{ url_for('profile.list') }}">Profiles</a></li>
 				<li><a href="{{ url_for('task.list') }}">Tasks</a></li>
 			</ul>
 		</div><!--/.nav-collapse -->
