--- a/sner_web/templates/task/list.html
+++ b/sner_web/templates/task/list.html
@@ -9,6 +9,8 @@
 		<tr>
 			<th>id</th>
 			<th>name</th>
+			<th>priority</th>
+			<th>profile</th>
 			<th>targets</th>
 			<th>created</th>
 			<th>modified</th>
@@ -20,6 +22,8 @@
 		<tr>
 			<td>{{ task.id }}</td>
 			<td>{{ task.name }}</td>
+			<td>{{ task.priority }}</td>
+			<td>{{ task.profile }}</td>
 			<td>{{ task.targets }}</td>
 			<td>{{ task.created }}</td>
 			<td>{{ task.modified }}</td>
