--- a/sner_web/templates/profile/addedit.html
+++ b/sner_web/templates/profile/addedit.html
@@ -2,19 +2,17 @@
 {% import "bootstrap_wtf.html" as b_wtf %}
 
 {% block content %}
-<div class="tasks">
-	<h1>Task add/edit</h1>
+<div class="profiles">
+	<h1>Profile add/edit</h1>
 
 	<form class="form-horizontal" action="{{ form_url }}" method="post">
 		{{ form.csrf_token }}
 
 		{{ b_wtf.bootstrap_field(form.name, horizontal=True) }}
-		{{ b_wtf.bootstrap_field(form.priority, horizontal=True) }}
-		{{ b_wtf.bootstrap_field(form.profile, horizontal=True) }}
 
 		<div class="form-group">
-			{{ form.targets.label(class="col-sm-2 control-label") }}
-			<div class="col-sm-10">{{ form.targets(class="form-control", rows="10")|safe }}</div>
+			{{ form.arguments.label(class="col-sm-2 control-label") }}
+			<div class="col-sm-10">{{ form.arguments(class="form-control", rows="10")|safe }}</div>
 		</div>
 
 		<div class="form-group">
