--- a/sner_web/templates/task/list.html
+++ b/sner_web/templates/task/list.html
@@ -11,7 +11,7 @@
 			<th>name</th>
 			<th>priority</th>
 			<th>profile</th>
-			<th>targets</th>
+			<th>targets | queued</th>
 			<th>created</th>
 			<th>modified</th>
 			<th></th>
@@ -24,12 +24,13 @@
 			<td>{{ task.name }}</td>
 			<td>{{ task.priority }}</td>
 			<td>{{ task.profile }}</td>
-			<td>{{ task.targets }}</td>
+			<td>{{ task.targets|length }} | {{ task.targets_queue|length }}</td>
 			<td>{{ task.created }}</td>
 			<td>{{ task.modified }}</td>
 			<td>
+				{% with form=generic_button_form, form_url=url_for('task.schedule_route', id=task.id), button_caption='Schedule' %}{% include 'button_generic.html' %}{% endwith %}
 				<a class="btn btn-xs btn-primary" href="{{ url_for('task.edit_route', id=task.id) }}"><span class="glyphicon glyphicon-edit"></span> Edit</a>
-				{% with form=task_delete_form, form_url=url_for('task.delete_route', id=task.id) %}{% include 'deletebutton.html' %}{% endwith %}
+				{% with form=generic_button_form, form_url=url_for('task.delete_route', id=task.id) %}{% include 'button_delete.html' %}{% endwith %}
 			</td>
 		</tr>
 		{% endfor %}
