--- a/sner_web/templates/base.html
+++ b/sner_web/templates/base.html
@@ -39,12 +39,12 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="{{ url_for('index') }}"><img src="{{ url_for('static', filename='logo.png') }}"></a>
+			<a class="navbar-brand" href="{{ url_for('index_route') }}"><img src="{{ url_for('static', filename='logo.png') }}"></a>
 		</div>
 		<div id="navbar" class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
-				<li><a href="{{ url_for('profile.list') }}">Profiles</a></li>
-				<li><a href="{{ url_for('task.list') }}">Tasks</a></li>
+				<li><a href="{{ url_for('profile.list_route') }}">Profiles</a></li>
+				<li><a href="{{ url_for('task.list_route') }}">Tasks</a></li>
 			</ul>
 		</div><!--/.nav-collapse -->
 	</div>
