--- a/sner_web/templates/profile/addedit.html
+++ b/sner_web/templates/profile/addedit.html
@@ -7,14 +7,12 @@
 
 	<form class="form-horizontal" action="{{ form_url }}" method="post">
 		{{ form.csrf_token }}
-
 		{{ b_wtf.bootstrap_field(form.name, horizontal=True) }}
-
+		{{ b_wtf.bootstrap_field(form.module, horizontal=True) }}
 		<div class="form-group">
-			{{ form.arguments.label(class="col-sm-2 control-label") }}
-			<div class="col-sm-10">{{ form.arguments(class="form-control", rows="10")|safe }}</div>
+			{{ form.params.label(class="col-sm-2 control-label") }}
+			<div class="col-sm-10">{{ form.params(class="form-control", rows="10")|safe }}</div>
 		</div>
-
 		<div class="form-group">
 			<label class="col-sm-2 control-label"></label>
 			<div class="col-sm-10"><button class="btn-default btn" type="submit">Save</button></div>
