--- a/sner_web/templates/base.html
+++ b/sner_web/templates/base.html
@@ -45,6 +45,7 @@
 			<ul class="nav navbar-nav">
 				<li><a href="{{ url_for('profile.list_route') }}">Profiles</a></li>
 				<li><a href="{{ url_for('task.list_route') }}">Tasks</a></li>
+				<li><a href="{{ url_for('job.list_route') }}">Jobs</a></li>
 			</ul>
 		</div><!--/.nav-collapse -->
 	</div>
