--- a/sner_web/templates/task/addedit.html
+++ b/sner_web/templates/task/addedit.html
@@ -13,6 +13,7 @@
 			{{ form.targets.label(class="col-sm-2 control-label") }}
 			<div class="col-sm-10">{{ form.targets(class="form-control", rows="10")|safe }}</div>
 		</div>
+		{{ b_wtf.bootstrap_field(form.group_size, horizontal=True) }}
 		{{ b_wtf.bootstrap_field(form.priority, horizontal=True) }}
 		<div class="form-group">
 			<label class="col-sm-2 control-label"></label>
