refactoring from simple basic app to scheduler component (part2)

--- a/sner/server/templates/base.html
+++ b/sner/server/templates/base.html
@@ -43,9 +43,9 @@
 		</div>
 		<div id="navbar" class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
-				<li><a href="{{ url_for('profile.list_route') }}">Profiles</a></li>
-				<li><a href="{{ url_for('task.list_route') }}">Tasks</a></li>
-				<li><a href="{{ url_for('job.list_route') }}">Jobs</a></li>
+				<li><a href="{{ url_for('scheduler.profile_list_route') }}">Profiles</a></li>
+				<li><a href="{{ url_for('scheduler.task_list_route') }}">Tasks</a></li>
+				<li><a href="{{ url_for('scheduler.job_list_route') }}">Jobs</a></li>
 			</ul>
 		</div><!--/.nav-collapse -->
 	</div>
