--- a/sner/server/templates/scheduler/job/list.html
+++ b/sner/server/templates/scheduler/job/list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="jobs">
-	<h1>Jobs list <a class="btn btn-xs btn-default" href="{{ url_for('job.assign_route') }}"> Assign</a></h1>
+	<h1>Jobs list <a class="btn btn-xs btn-default" href="{{ url_for('scheduler.job_assign_route') }}"> Assign</a></h1>
 
 	<table id="jobs_table" class="datatable table table-hover table-responsive">
 	<thead>
@@ -28,7 +28,7 @@
 			<td>{{ job.time_start|datetime }}</td>
 			<td>{{ job.time_end|datetime }}</td>
 			<td>
-				{% with form=generic_button_form, form_url=url_for('job.delete_route', job_id=job.id) %}{% include 'button_delete.html' %}{% endwith %}
+				{% with form=generic_button_form, form_url=url_for('scheduler.job_delete_route', job_id=job.id) %}{% include 'button_delete.html' %}{% endwith %}
 			</td>
 		</tr>
 		{% endfor %}
