--- a/sner/server/templates/scheduler/task/addedit.html
+++ b/sner/server/templates/scheduler/task/addedit.html
@@ -11,6 +11,7 @@
 		{{ b_wtf.bootstrap_field(form.profile, horizontal=True) }}
 		{{ b_wtf.bootstrap_field(form.group_size, horizontal=True) }}
 		{{ b_wtf.bootstrap_field(form.priority, horizontal=True) }}
+		{{ b_wtf.bootstrap_field(form.active, horizontal=True) }}
 		<div class="form-group">
 			{{ form.targets_field.label(class="col-sm-2 control-label") }}
 			<div class="col-sm-10">{{ form.targets_field(class="form-control", rows="10")|safe }}</div>
