scheduler: naming refactoring Profile>Task, Task>Queue

--- a/sner/server/templates/base.html
+++ b/sner/server/templates/base.html
@@ -43,8 +43,8 @@
 		</div>
 		<div id="navbar" class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
-				<li><a href="{{ url_for('scheduler.profile_list_route') }}">Profiles</a></li>
 				<li><a href="{{ url_for('scheduler.task_list_route') }}">Tasks</a></li>
+				<li><a href="{{ url_for('scheduler.queue_list_route') }}">Queues</a></li>
 				<li><a href="{{ url_for('scheduler.job_list_route') }}">Jobs</a></li>
 			</ul>
 		</div><!--/.nav-collapse -->
