--- a/sner/server/templates/scheduler/job/list.html
+++ b/sner/server/templates/scheduler/job/list.html
@@ -10,7 +10,7 @@
 			<th>id</th>
 			<th>assignment</th>
 			<th>result</th>
-			<th>task</th>
+			<th>queue</th>
 			<th>time_start</th>
 			<th>time_end</th>
 			<th></th>
@@ -22,7 +22,7 @@
 			<td>{{ job.id }}</td>
 			<td>{{ job.assignment }}</td>
 			<td>{{ job.result }}</td>
-			<td>{{ job.task }}</td>
+			<td>{{ job.queue }}</td>
 			<td>{{ job.time_start|datetime }}</td>
 			<td>{{ job.time_end|datetime }}</td>
 			<td>
