--- a/sner/server/templates/scheduler/queue/addedit.html
+++ b/sner/server/templates/scheduler/queue/addedit.html
@@ -2,16 +2,19 @@
 {% import "bootstrap_wtf.html" as b_wtf %}
 
 {% block content %}
-<div class="profiles">
-	<h1>Profile add/edit</h1>
+<div class="queues">
+	<h1>Queue add/edit</h1>
 
 	<form class="form-horizontal" action="{{ form_url }}" method="post">
 		{{ form.csrf_token }}
 		{{ b_wtf.bootstrap_field(form.name, horizontal=True) }}
-		{{ b_wtf.bootstrap_field(form.module, horizontal=True) }}
+		{{ b_wtf.bootstrap_field(form.task, horizontal=True) }}
+		{{ b_wtf.bootstrap_field(form.group_size, horizontal=True) }}
+		{{ b_wtf.bootstrap_field(form.priority, horizontal=True) }}
+		{{ b_wtf.bootstrap_field(form.active, horizontal=True) }}
 		<div class="form-group">
-			{{ form.params.label(class="col-sm-2 control-label") }}
-			<div class="col-sm-10">{{ form.params(class="form-control", rows="10")|safe }}</div>
+			{{ form.targets_field.label(class="col-sm-2 control-label") }}
+			<div class="col-sm-10">{{ form.targets_field(class="form-control", rows="10")|safe }}</div>
 		</div>
 		<div class="form-group">
 			<label class="col-sm-2 control-label"></label>
