--- a/sner/server/templates/scheduler/task/list.html
+++ b/sner/server/templates/scheduler/task/list.html
@@ -9,11 +9,8 @@
 		<tr>
 			<th>id</th>
 			<th>name</th>
-			<th>profile</th>
-			<th>group_size</th>
-			<th>priority</th>
-			<th>active</th>
-			<th>targets</th>
+			<th>module</th>
+			<th>params</th>
 			<th>created</th>
 			<th>modified</th>
 			<th></th>
@@ -24,14 +21,12 @@
 		<tr>
 			<td>{{ task.id }}</td>
 			<td>{{ task.name }}</td>
-			<td>{{ task.profile }}</td>
-			<td>{{ task.group_size }}</td>
-			<td>{{ task.priority }}</td>
-			<td>{{ task.active }}</td>
-			<td>{{ count_targets[task.id]|default(0) }}</td>
+			<td>{{ task.module }}</td>
+			<td>{{ task.params }}</td>
 			<td>{{ task.created|datetime }}</td>
 			<td>{{ task.modified|datetime }}</td>
 			<td>
+				<a class="btn btn-xs btn-default" href="{{ url_for('scheduler.queue_add_route', task_id=task.id) }}"><span class="glyphicon glyphicon-plus"></span> Queue</a>
 				<a class="btn btn-xs btn-primary" href="{{ url_for('scheduler.task_edit_route', task_id=task.id) }}"><span class="glyphicon glyphicon-edit"></span> Edit</a>
 				{% with form=generic_button_form, form_url=url_for('scheduler.task_delete_route', task_id=task.id) %}{% include 'button_delete.html' %}{% endwith %}
 			</td>
