--- a/sner/server/templates/scheduler/queue/enqueue.html
+++ b/sner/server/templates/scheduler/queue/enqueue.html
@@ -3,15 +3,14 @@
 
 {% block content %}
 <div class="queues">
-	<h1>Queue add/edit</h1>
+	<h1>Queue enqueue</h1>
 
 	<form class="form-horizontal" action="{{ form_url }}" method="post">
 		{{ form.csrf_token }}
-		{{ b_wtf.bootstrap_field(form.name, horizontal=True) }}
-		{{ b_wtf.bootstrap_field(form.task, horizontal=True) }}
-		{{ b_wtf.bootstrap_field(form.group_size, horizontal=True) }}
-		{{ b_wtf.bootstrap_field(form.priority, horizontal=True) }}
-		{{ b_wtf.bootstrap_field(form.active, horizontal=True) }}
+		<div class="form-group">
+			{{ form.targets.label(class="col-sm-2 control-label") }}
+			<div class="col-sm-10">{{ form.targets(class="form-control", rows="10")|safe }}</div>
+		</div>
 		<div class="form-group">
 			<label class="col-sm-2 control-label"></label>
 			<div class="col-sm-10"><button class="btn-default btn" type="submit">Save</button></div>
