--- a/sner/server/templates/scheduler/queue/list.html
+++ b/sner/server/templates/scheduler/queue/list.html
@@ -28,6 +28,8 @@
 			<td>{{ queue.active }}</td>
 			<td>{{ count_targets[queue.id]|default(0) }}</td>
 			<td>
+				<a class="btn btn-xs btn-default" href="{{ url_for('scheduler.queue_enqueue_route', queue_id=queue.id) }}"> Enqueue</a>
+				{% with form=generic_button_form, form_url=url_for('scheduler.queue_flush_route', queue_id=queue.id), button_caption='Flush' %}{% include 'button_generic.html' %}{% endwith %}
 				<a class="btn btn-xs btn-primary" href="{{ url_for('scheduler.queue_edit_route', queue_id=queue.id) }}"><span class="glyphicon glyphicon-edit"></span> Edit</a>
 				{% with form=generic_button_form, form_url=url_for('scheduler.queue_delete_route', queue_id=queue.id) %}{% include 'button_delete.html' %}{% endwith %}
 			</td>
