--- a/sner/server/templates/scheduler/task/addedit.html
+++ b/sner/server/templates/scheduler/task/addedit.html
@@ -9,12 +9,12 @@
 		{{ form.csrf_token }}
 		{{ b_wtf.bootstrap_field(form.name, horizontal=True) }}
 		{{ b_wtf.bootstrap_field(form.profile, horizontal=True) }}
-		<div class="form-group">
-			{{ form.targets.label(class="col-sm-2 control-label") }}
-			<div class="col-sm-10">{{ form.targets(class="form-control", rows="10")|safe }}</div>
-		</div>
 		{{ b_wtf.bootstrap_field(form.group_size, horizontal=True) }}
 		{{ b_wtf.bootstrap_field(form.priority, horizontal=True) }}
+		<div class="form-group">
+			{{ form.targets_field.label(class="col-sm-2 control-label") }}
+			<div class="col-sm-10">{{ form.targets_field(class="form-control", rows="10")|safe }}</div>
+		</div>
 		<div class="form-group">
 			<label class="col-sm-2 control-label"></label>
 			<div class="col-sm-10"><button class="btn-default btn" type="submit">Save</button></div>
