--- a/sner/server/templates/scheduler/job/list.html
+++ b/sner/server/templates/scheduler/job/list.html
@@ -9,7 +9,8 @@
 		<tr>
 			<th>id</th>
 			<th>assignment</th>
-			<th>result</th>
+			<th>retval</th>
+			<th>output</th>
 			<th>queue</th>
 			<th>time_start</th>
 			<th>time_end</th>
@@ -21,7 +22,8 @@
 		<tr>
 			<td>{{ job.id }}</td>
 			<td>{{ job.assignment }}</td>
-			<td>{{ job.result }}</td>
+			<td>{{ job.retval }}</td>
+			<td>{{ job.output }}</td>
 			<td>{{ job.queue }}</td>
 			<td>{{ job.time_start|datetime }}</td>
 			<td>{{ job.time_end|datetime }}</td>
