--- a/sner/server/templates/base.html
+++ b/sner/server/templates/base.html
@@ -43,9 +43,10 @@
 		</div>
 		<div id="navbar" class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
-				<li><a href="{{ url_for('scheduler.task_list_route') }}">Tasks</a></li>
-				<li><a href="{{ url_for('scheduler.queue_list_route') }}">Queues</a></li>
-				<li><a href="{{ url_for('scheduler.job_list_route') }}">Jobs</a></li>
+				<li><a href="{{ url_for('scheduler.task_list_route') }}">sch:Tasks</a></li>
+				<li><a href="{{ url_for('scheduler.queue_list_route') }}">sch:Queues</a></li>
+				<li><a href="{{ url_for('scheduler.job_list_route') }}">sch:Jobs</a></li>
+				<li><a href="{{ url_for('storage.host_list_route') }}">st:Hosts</a></li>
 			</ul>
 		</div><!--/.nav-collapse -->
 	</div>
