--- a/sner/server/templates/base.html
+++ b/sner/server/templates/base.html
@@ -47,6 +47,7 @@
 				<li><a href="{{ url_for('scheduler.queue_list_route') }}">sch:Queues</a></li>
 				<li><a href="{{ url_for('scheduler.job_list_route') }}">sch:Jobs</a></li>
 				<li><a href="{{ url_for('storage.host_list_route') }}">st:Hosts</a></li>
+				<li><a href="{{ url_for('storage.host_vizdns_route') }}">st:Hosts:vizdns</a></li>
 			</ul>
 		</div><!--/.nav-collapse -->
 	</div>
