storage: editable services

--- a/sner/server/templates/base.html
+++ b/sner/server/templates/base.html
@@ -48,6 +48,7 @@
 				<li><a href="{{ url_for('scheduler.job_list_route') }}">sch:Jobs</a></li>
 				<li><a href="{{ url_for('storage.host_list_route') }}">st:Hosts</a></li>
 				<li><a href="{{ url_for('storage.host_vizdns_route') }}">st:Hosts:vizdns</a></li>
+				<li><a href="{{ url_for('storage.service_list_route') }}">st:Services</a></li>
 			</ul>
 		</div><!--/.nav-collapse -->
 	</div>
