--- a/sner/server/templates/base.html
+++ b/sner/server/templates/base.html
@@ -49,6 +49,7 @@
 				<li><a href="{{ url_for('storage.host_list_route') }}">st:Hosts</a></li>
 				<li><a href="{{ url_for('storage.host_vizdns_route') }}">st:Hosts:vizdns</a></li>
 				<li><a href="{{ url_for('storage.service_list_route') }}">st:Services</a></li>
+				<li><a href="{{ url_for('storage.note_list_route') }}">st:Notes</a></li>
 			</ul>
 		</div><!--/.nav-collapse -->
 	</div>
