storage: services list non-optional pagination at footer (#24)

--- a/sner/server/templates/storage/service/list.html
+++ b/sner/server/templates/storage/service/list.html
@@ -43,6 +43,6 @@
 	</tbody>
 	</table>
 
-	<div class="text-center">{{ macro.pagination(services, request.url_rule.endpoint) }}</div>
+	{% if services.pages > 1 %}<div class="text-center">{{ macro.pagination(services, request.url_rule.endpoint) }}</div>{% endif %}
 </div>
 {% endblock %}
