general: add processing indicator to datatables

--- a/sner/server/templates/base.html
+++ b/sner/server/templates/base.html
@@ -93,8 +93,9 @@
 
 		var datatables_ajax_options = {
 			"serverSide": true,
+			"processing": true,
 			"order": [[ 0, "asc" ]],
-			"dom": "<flptip>",
+			"dom": "<flprtip>",
 			"paging": true,
 			"pageLength": 10,
 			"info": true,
