--- a/sner/server/templates/storage/host/list_datatable_controls.html
+++ b/sner/server/templates/storage/host/list_datatable_controls.html
@@ -1,3 +1,4 @@
+<a class="btn btn-xs btn-default" href="{{ url_for('storage.host_view_route', host_id=host.id) }}"><span class="glyphicon glyphicon-info-sign"></span> View</a>
 <a class="btn btn-xs btn-default" href="{{ url_for('storage.service_add_route', host_id=host.id) }}"><span class="glyphicon glyphicon-plus"></span> Service</a>
 <a class="btn btn-xs btn-default" href="{{ url_for('storage.note_add_route', host_id=host.id) }}"><span class="glyphicon glyphicon-plus"></span> Note</a>
 <a class="btn btn-xs btn-primary" href="{{ url_for('storage.host_edit_route', host_id=host.id) }}"><span class="glyphicon glyphicon-edit"></span> Edit</a>
