--- a/sner/server/templates/storage/note/list.html
+++ b/sner/server/templates/storage/note/list.html
@@ -3,7 +3,7 @@
 {% block script %}
 <script type="text/javascript">
 	var datatables_ajax_custom = {
-		"ajax": {"url": "/storage/note/list.json", "method": "POST"},
+		"ajax": {"url": "{{ url_for('storage.note_list_json_route') }}", "method": "POST"},
 		"columns": columns_with_buttons(["id", "host", "ntype", "data", "created", "modified"])
 	}
 </script>
