--- a/sner/server/templates/storage/service/list.html
+++ b/sner/server/templates/storage/service/list.html
@@ -3,7 +3,7 @@
 {% block script %}
 <script type="text/javascript">
 	var datatables_ajax_custom = {
-		"ajax": {"url": "/storage/service/list.json", "method": "POST"},
+		"ajax": {"url": "{{ url_for('storage.service_list_json_route', **request.args) }}", "method": "POST"},
 		"columns": columns_with_buttons(["id", "host", "proto", "port", "name", "state", "info", "created", "modified"])
 	}
 </script>
@@ -11,7 +11,7 @@
 
 {% block content %}
 <div class="services">
-	<h1>Services list</h1>
+	<h1>Services list{% if 'port' in request.args %} <small><a class="btn btn-default" href="{{ url_for('storage.service_list_route') }}">unfilter</a></small>{% endif %}</h1>
 
 	<table id="services_table" class="datatable_ajax table table-hover table-responsive">
 	</table>
