--- a/sner/server/templates/storage/service/list.html
+++ b/sner/server/templates/storage/service/list.html
@@ -11,7 +11,7 @@
 
 {% block content %}
 <div class="services">
-	<h1>Services list{% if 'port' in request.args %} <small><a class="btn btn-default" href="{{ url_for('storage.service_list_route') }}">unfilter</a></small>{% endif %}</h1>
+	<h1>Services list{% if 'port' in request.args %} <small><a class="btn btn-info" href="{{ url_for('storage.service_list_route') }}">unfilter</a></small>{% endif %}</h1>
 
 	<table id="services_table" class="datatable_ajax table table-hover table-responsive">
 	</table>
